fix: CORS configuration and API endpoint paths
- Enable CORS in Spring Security config
- Add API context path to frontend API endpoints
- Fix CORS preflight issues